# uimacpp_ros

./: CMakeLists.txt  package.xml
src/: GPATH  GRTAGS  GSYMS  GTAGS
src/cas/include/uima/: GPATH  GRTAGS  GSYMS  GTAGS
src/framework/: CMakeLists.txt  annotator_mgr.cpp  taespecifier.cpp  taespecifierbuilder.cpp
src/framework/include/uima/: config_param.hpp  taespecifier.hpp  taespecifierbuilder.hpp
src/utils/: CMakeLists.txt
